Web Inspector: XHR content sometimes shows as error even though load succeeded https://bugs.webkit.org/show_bug.cgi?id=188385 <rdar://problem/42646160>

Source/WebCore:

Reviewed by Devin Rousso.

* inspector/agents/InspectorNetworkAgent.cpp:
(WebCore::InspectorNetworkAgent::didReceiveData):
Avoid a double hash lookup in the common case.
Allow synchronous XHR to have text data appended in the normal case.
Allow synchronous XHR to set base64 encoded data right here for non-text data.

* inspector/NetworkResourcesData.h:
(WebCore::NetworkResourcesData::ResourceData::hasBufferedData const):
Getter to see if data is buffered or not for this resource.

* inspector/NetworkResourcesData.cpp:
(WebCore::NetworkResourcesData::maybeAddResourceData):
Return the updated ResourceData to avoid clients having to do a lookup.

LayoutTests:

Reviewed by Devin Rousso.

* http/tests/inspector/network/xhr-response-body-expected.txt:
* http/tests/inspector/network/xhr-response-body.html:
Extend this test to include synchronous XHR for text and non-text resources.

Canonical link: https://commits.webkit.org/203520@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234702 268f45cc-cd09-0410-ab3c-d52691b4dbfc